@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-100
+CSN=CSN-platforms-101
 Dependencies=hasim/HEAD
